# praster

./: .gitignore  AUTHORS  CMakeLists.txt  LICENCE  README.md  build
docs/: CMakeLists.txt  mainpage.md
include/: algorithm.h  executor.h  stripe.h  tile.h
src/: CMakeLists.txt  executor.cc  main.cc  stripe.cc  tile.cc
test/: CMakeLists.txt  test_stripe.cc  test_tile.cc
